clean up dir structure

--- a/gpcs_remote/.meta-cnc.yaml
+++ b/gpcs_remote/.meta-cnc.yaml
@@ -1,4 +1,4 @@
-name: gpcs_remote_v90
+name: gpcs_remote
 label: GPCS Add New Remote Network
 description: add new site to GPCS cloud instance
 type: panorama-gpcs
