--- a/gpcs_baseline_multitenancy/.meta-cnc.yaml
+++ b/gpcs_baseline_multitenancy/.meta-cnc.yaml
@@ -1,8 +1,8 @@
-name: gpcs_multitenancy_baseline_v90
+name: gpcs_multitenancy_baseline
 label: GPCS New Multitenant Cloud Instance Configuration
 description: GPCS onboarding of new cloud instance
 type: panorama-gpcs
-extends: skillet_panorama_v90
+extends: skillet_panorama
 
 labels:
   service_type: gpcs
