--- a/gpcs_baseline_multitenancy/.meta-cnc.yaml
+++ b/gpcs_baseline_multitenancy/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: gpcs_multitenancy_baseline
 label: GPCS New Multitenant Cloud Instance Configuration
 description: GPCS onboarding of new cloud instance
 type: panorama-gpcs
-extends: skillet_panorama
+extends:
 
 labels:
   service_type: gpcs
