metadata clean up

--- a/gpcs_baseline_multitenancy/.meta-cnc.yaml
+++ b/gpcs_baseline_multitenancy/.meta-cnc.yaml
@@ -6,7 +6,9 @@ extends:
 
 labels:
   service_type: gpcs
-  collection: mssp
+  collection:
+    - mssp
+    - gpcs
 
 variables:
   - name: GPCS_IP
